# llm-yt-transcript

./: README.md  llm_yt_transcript.py  main.py  nb.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
